// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractDependencies() extracts engines 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "1.6.0",
      "depName": "angular",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.6.0",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/cli",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "*",
      "depName": "foo",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/foo",
      "skipReason": "any-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "file",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "",
      "depName": "baz",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/baz",
      "skipReason": "empty",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": ">=1.7.0 <2.0.0",
      "depName": "atom",
      "depType": "engines",
      "prettyDepType": "engine",
      "skipReason": "unknown-engines",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": ">= 8.9.2",
      "depName": "node",
      "depType": "engines",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "engine",
      "purl": "pkg:github/nodejs/node?sanitize=true",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "npm",
      "currentValue": "^8.0.0",
      "depName": "npm",
      "depType": "engines",
      "prettyDepType": "engine",
      "purl": "pkg:npm/npm",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "disabled",
      "depName": "yarn",
      "depType": "engines",
      "prettyDepType": "engine",
      "purl": "pkg:npm/yarn",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": false,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() extracts non-npmjs 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "github:owner/a",
      "depName": "a",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "github:owner/b#master",
      "depName": "b",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
      "versionScheme": "semver",
    },
    Object {
      "currentRawValue": "github:owner/c#v1.1.0",
      "currentValue": "v1.1.0",
      "depName": "c",
      "depType": "dependencies",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "purl": "pkg:github/owner/c?ref=tags",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "github:owner/d#a7g3eaf",
      "depName": "d",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
      "versionScheme": "semver",
    },
    Object {
      "currentDigest": "49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentRawValue": "github:owner/e#49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentValue": null,
      "depName": "e",
      "depType": "dependencies",
      "githubRepo": "owner/e",
      "prettyDepType": "dependency",
      "purl": "pkg:github/owner/e",
      "repositoryUrl": "https://github.com/owner/e",
      "versionScheme": "semver",
    },
    Object {
      "currentRawValue": "owner/f#v2.0.0",
      "currentValue": "v2.0.0",
      "depName": "f",
      "depType": "dependencies",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "purl": "pkg:github/owner/f?ref=tags",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "gitlab:owner/g#v1.0.0",
      "depName": "g",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "github:-hello/world#v1.0.0",
      "depName": "h",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "@foo/bar#v2.0.0",
      "depName": "i",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "github:frank#v0.0.1",
      "depName": "j",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentDigest": "49b5aca",
      "currentRawValue": "github:owner/k#49b5aca",
      "currentValue": null,
      "depName": "k",
      "depType": "dependencies",
      "githubRepo": "owner/k",
      "prettyDepType": "dependency",
      "purl": "pkg:github/owner/k",
      "repositoryUrl": "https://github.com/owner/k",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds a lock file 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": "yarn.lock",
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds complex yarn workspaces 1`] = `
Object {
  "deps": Array [],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "packageJsonVersion": "0.0.8",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds lerna 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() returns an array of dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;
